
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sigaction {int sa_flags; int * sa_handler; } ;
typedef int sigset_t ;
typedef int act ;


 int SA_NODEFER ;
 int SIGINT ;
 int SIG_BLOCK ;
 int SIG_UNBLOCK ;
 int fflush (int ) ;
 int memset (struct sigaction*,int,int ) ;
 int printf (char*) ;
 int process_cmd () ;
 int sigaction (int ,struct sigaction*,int *) ;
 int sigaddset (int *,int ) ;
 int sigemptyset (int *) ;
 int sigint_dest ;
 int sigint_handler ;
 int signal (int ,int ) ;
 int sigprocmask (int ,int *,int *) ;
 scalar_t__ sigsetjmp (int ,int) ;
 int stdout ;

__attribute__((used)) static void process_cmds(void)
{
 sigset_t signal_set;

 struct sigaction act;

 sigemptyset( &signal_set);
 sigaddset( &signal_set, SIGINT);


 sigprocmask(SIG_BLOCK, &signal_set, ((void*)0));



 memset(&act, sizeof(act), 0);
 act.sa_handler = &sigint_handler;
 act.sa_flags = SA_NODEFER;
 sigaction(SIGINT, &act, ((void*)0));







 sigprocmask(SIG_UNBLOCK, &signal_set, ((void*)0));
 for (;;)
  process_cmd();
}
